Seting things up for Deployment

--- a/src/index.css
+++ b/src/index.css
@@ -229,7 +229,7 @@ button:hover {
     width: 100%;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (max-width: 1020px) {
  .spline{
   display: none;
  }
